# Miautawn-Auto-Validate-By-History

./: .gitignore  .pre-commit-config.yaml  README.md  avhdemo.py  pyproject.toml
benchmark/: README.md  benchmark_avh.py  benchmark_avh_diet.py  benchmark_data_generation.py  benchmark_health_esn.py  benchmark_ks_test.py  benchmark_ks_test_full.py  benchmark_lof.py  benchmark_tfdv.py  benchmark_tfdv_full.py  benchmark_visualisations.ipynb  temp.ipynb
benchmark/healthESN/: __init__.py  model.py
notebooks/: AVH_implementation.ipynb  benchmark_data_generation.ipynb
src/: avhdemo.py
src/avh/: auto_validate_by_history.py  constraints.py  data_generation.py  data_quality_issues.py  metrics.py  utility_functions.py
src/avh/data_generation/: _categorical.py
