[tool.poetry]
name = "auto-validate-by-history-clone"
version = "0.1.0"
description = ""
authors = ["miautawn <miautawn@gmail.com>"]
packages = [
  {include = "avh", from = "src"},
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.0"
numpy = "^1.26.4"
notebook = "^7.1.0"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
jupyter-black = "^0.3.4"
tqdm = "^4.66.2"
statsmodels = "^0.14.1"
gutenbergpy = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
